--- a/index.html
+++ b/index.html
@@ -16,21 +16,9 @@
       <ul class="clear">
         <li class="active"><a href="index.html">Главная</a></li>
         <li><a href="pages/gallery.html">Галерея</a></li>
-        </li>
-        <li><a class="drop" href="#">Список</a>
-          <ul>
-            <li><a href="#">Уровень 2</a></li>
-            <li><a class="drop" href="#">Уровень 2 + Список</a>
-              <ul>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Уровень 2</a></li>
-          </ul>
-        </li>
+        <li><a href="pages/price.html">Услуги</a></li>
         <li><a href="pages/about.html">О нас</a></li>
+        <li><a href="pages/feedBack.html">Обратная связь</a></li>
       </ul>
     </nav>
   </header>
@@ -128,6 +116,6 @@
 <script src="layout/scripts/jquery.backtotop.js"></script> 
 <script src="layout/scripts/jquery.mobilemenu.js"></script> 
 
-<script src="layout/scripts/jquery.flexslider-min.js"></script>
+
 </body>
 </html>
