--- a/pages/about.html
+++ b/pages/about.html
@@ -18,21 +18,10 @@
       <ul class="clear">
         <li><a href="../index.html">Главная</a></li>
         <li><a href="../pages/gallery.html">Галерея</a></li>
-        </li>
-        <li><a class="drop" href="#">Список</a>
-          <ul>
-            <li><a href="#">Уровень 2</a></li>
-            <li><a class="drop" href="#">Уровень 2 + Список</a>
-              <ul>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Уровень 2</a></li>
-          </ul>
-        </li>
+        <li><a href="../pages/price.html">Услуги</a></li>
         <li class="active"><a href="../pages/about.html">О нас</a></li>
+        <li><a href="../pages/feedBack.html">Обратная связь</a></li>
+
       </ul>
     </nav>
   </header>
@@ -46,29 +35,17 @@
       <p>ну тут еще какой-то текст.</p>
       <p>и вот тут можно что-то написать умное</p>
       <p>или просто взять кусок текста из рандомной книги</p>
-      <p>Если у вас остались вопросы или вы хотите обсудить проэкт, вы можете связаться с нами используя форму ниже</p>
 
-      <div id="comments">
-        <h2>Обратная связь</h2>
-        <form action="#" method="post">
-          <div class="one_half first">
-            <label for="name">Имя <span>*</span></label>
-            <input type="text" name="name" id="name" value="" size="22">
-          </div>
-          <div class="one_half">
-            <label for="email">Почтовый адрес <span>*</span></label>
-            <input type="text" name="email" id="email" value="" size="22">
-          </div>
- 
-          <div class="block clear">
-            <label for="comment">Сообщение</label>
-            <textarea name="comment" id="comment" cols="25" rows="10"></textarea>
-          </div>
-          <div>
-            <input name="submit" type="submit" value="Отправить">
-          </div>
-        </form>
-      </div>
+      <h1>Наш коллектив</h1>
+      <p>не знаю что еще придумать, разве только что соббщить занимательный факт. Наш штаб состоит из вампирского клана Малковиан, трудящихся в поте всех своих лиц над вашим будущим проектом. Раз такое дело просим вас не огорчать шизов и заказать у нас сайтик.</p>
+
+      <h1>Контакты</h1>
+      <p>телефон: 8 800 555 35 35</p>
+      <p>e-mail: vasyapupkin@mail.py</p>
+      <p>Адрес: ул. Связистов д. 38 оф. 101</p>
+      <p>Главный офис в созвездии ореона, оттуда мы и получаем указания. ТАк что не имеет смысла жалким людишкам сообщать адрес</p>
+
+
     </div>
     <div class="clear"></div>
   </main>
