--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -17,23 +17,10 @@
     <nav id="mainav" class="fl_right">
       <ul class="clear">
         <li><a href="../index.html">Главная</a></li>
-        <li class="active"><a href="pages/gallery.html">Галерея</a></li>
-        </li>
-        <li><a class="drop" href="#">Список</a>
-          <ul>
-            <li><a href="#">Уровень 2</a></li>
-            <li><a class="drop" href="#">Уровень 2 + Список</a>
-              <ul>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-                <li><a href="#">Уровень 3</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Уровень 2</a></li>
-          </ul>
-        </li>
+        <li class="active"><a href="../pages/gallery.html">Галерея</a></li>
+        <li><a href="../pages/price.html">Услуги</a></li>
         <li><a href="../pages/about.html">О нас</a></li>
-      </ul>
+        <li><a href="../pages/feedBack.html">Обратная связь</a></li>
     </nav>
   </header>
 </div>
